# scirs-sim

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: Cargo.toml
examples/src/: example_1.rs
src/core/: Cargo.toml
src/core/src/: block.rs  lib.rs  model.rs
src/core/src/dag/: dag.rs  mod.rs  node.rs
src/std/: Cargo.toml  const_block.rs  lib.rs
src/std/src/: const_block.rs
src/std/src/toy/: Cargo.toml
src/std/src/toy/src/: toy_type_1.rs
src/std/toy/: Cargo.toml
src/std/toy/src/: toy_type_1.rs
tests/: Cargo.toml  example.rs
