[package]
name = "rust_model_example"
version = "0.1.0"
authors = ["Miaofei <ameision@hotmail.com>"]
edition = "2018"

[dependencies]
rust_model_core = { path = "../src/core" }
rust_model_stdlib = { path = "../src/std" }

[[example]]
name = "example_1"
path = "src/example_1.rs"
# crate-type = ["bin"]
